--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,8 +68,10 @@ h6 {
 
 #header .header-container {
   background: #fff;
-  margin: 0 auto; /* Center the container horizontally */
-  max-width: 70%; /* Adjust the maximum width as needed */
+  margin: 0 auto; 
+  max-width: 70%;
+  border-radius: 10px;
+
 }
 
 
@@ -78,11 +80,15 @@ h6 {
   box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
   top: 0;
 }
+#header.header-scrolled .logo {
+  border-radius: 0;
+}
 
 #header .logo {
   overflow: hidden;
   padding: 16px 30px 12px 30px;
   background: #d9232d;
+  border-radius: 10px 0 0 10px;
 }
 
 #header .logo h1 {
@@ -279,6 +285,7 @@ h6 {
 @media (max-width: 991px) {
   .mobile-nav-toggle {
     display: block;
+    position: absolute;
   }
 
   .navbar ul {
